# immich

./: README.md  build_server.sh
autogen/: Dockerfile  pyproject.toml
immich-app/: .env  docker-compose.yml
immich-app/volumes/api/: kong.yml
immich-app/volumes/db/data/: postmaster.pid
immich-app/volumes/db/data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13339  13339_fsm  13339_vm  13343  13344  13344_fsm  13344_vm  13348  13349  13349_fsm  13349_vm  13353  13354  13354_fsm  13354_vm  13358  175  2187  2224  2228  2337  24576  24589  2579  2600  2600_fsm  (+178 more)
immich-app/volumes/db/data/base/5/: pg_internal.init
immich-app/volumes/db/data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
immich-app/volumes/db/data/pg_stat_tmp/: pgss_query_texts.stat
immich-app/volumes/db/data/pg_xact/: 0000
machine-learning/: build_machine_learning.sh
mobile/: pubspec.yaml
mobile/lib/modules/map/ui/: asset_marker_icon.dart
server/: Dockerfile  package-lock.json  package.json
server/apps/immich/src/api-v1/auth/: auth.controller.ts  auth.service.spec.ts  auth.service.ts
server/libs/domain/src/: domain.module.ts  index.ts
server/libs/infra/src/: infra.module.ts
server/src/: main.ts
server/src/ai/: ai.module.ts  ai.service.ts  main.ts
server/src/domain/job/: job.constants.ts  job.interface.ts
server/src/microservices/: app.service.ts
server/src/supabase/: supabase.module.ts  supabase.service.ts
web/: package-lock.json  package.json
(+4 files in other folders)
