[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["Travis James <travis@tribecore.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyautogen = "^0.2.2"
openai = "^1.3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
